# iroh-lan-dns

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: dns.rs  main.rs  p2p.rs  simple_dns.rs
