[package]
name = "tunnels"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh-lan = { git = "https://github.com/rustonbsd/iroh-lan.git", tag = "v1.0.0-rc2" }
runas = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
self-runas = "0.1"
clap = { version = "4", features = ["derive"] }
hickory-proto = "0.25"

[[bin]]
name = "tunnels"
test = false
bench = false

